--- a/springMVC/upload/src/main/resources/application.properties
+++ b/springMVC/upload/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 logging.level.org.apache.coyote.http11=debug
 
 file.dir=C:/major/spring/springMVC/
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
